<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="click_to_signup">Click_to_signup</string>
    <string name="signup">Signup</string>
    <string name="click_to_login">Click_to_login</string>
    <string name="hi_baby">Hi baby</string>
    <string name="logout">Logout</string>
    <string name="button">Button</string>
    <string name="search_doctor">SearchDoctor</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="select_date">Select date</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="done">Done</string>
    <string name="create_new_sign_up">Create New Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account login</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pending_appointments">Pending Appointments</string>
    <string name="view_appointments">View Appointments</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_email">Patient Email</string>
    <string name="appointment_date" />
    <string name="appointment_time" />
    <string name="ok">OK</string>
    <string name="pending_Appointments">Pending Appointments</string>
    <string name="accept1">Accept</string>
    <string name="reject1">Reject</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="donee">Done</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="view_upcoming">View Upcoming</string>
    <string name="view_medical_history">View Medical History</string>
    <string name="medical_history_details_here">Medical History Details Here</string>
    <string name="back">Back</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="chat_with_doctor">Chat with Doctor</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="your_appointmentss">Your Appointments</string>
    <string name="cancel">cancel</string>
    <string name="namek">Name</string>
    <string name="email4">Email</string>
    <string name="confirm_pasword" />
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password4">Confirm Password</string>
    <string name="patient_login">\n</string>
    <string name="create_new_account_signup">Create New Account. SignUp</string>
    <string name="doctor_login" />
    <string name="admin_login2" />
    <string name="doctor_signup">Doctor SignUp</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="name5" />
    <string name="generate_invoice2" />
    <string name="view_reports" />
    <string name="add_doctor4" />
    <string name="phone">Phone</string>
    <string name="qualification">Qualification</string>
    <string name="experience">Experience</string>
    <string name="e_doc3" />
    <string name="add_doctor" />
    <string name="doctor_name" />
    <string name="doctor_email" />
    <string name="phone_number" />
    <string name="years_of_experience" />
    <string name="category" />
    <string name="enter_doctor_s_fee" />
    <string name="e_doc" />
    <string name="login_as_admin1" />
    <string name="login_as_patient" />
    <string name="login_as_doctor" />
    <string name="view_pending_appointments" />
    <string name="view_upcoming_appointments" />
    <string name="cancel_appointment" />
    <string name="login_as_a_doctor">Login As Doctor</string>
    <string name="login_as_a_patient">Login As Patient</string>
    <string name="login_as_the_admin">Login As Admin</string>
    <string name="e_doctor">E-Doc</string>
    <string name="admin_login23">Admin LogIn</string>
    <string name="e_doctor1">E-Doc</string>
    <string name="add_doctor1">Add Doctor</string>
    <string name="first">Name</string>
    <string name="second">Email</string>
    <string name="phoneno">Phone #</string>
    <string name="qualificationss">Qualification</string>
    <string name="years">Years of Experience</string>
    <string name="doneadding">Done</string>
    <string name="doctors_fee">Doctor\'s Fee</string>
    <string name="doccategory">Category</string>
    <string name="generate_invoice1">Generate Invoice</string>
    <string name="wahajasif">Wahaj Asif</string>
    <string name="viewreports">View Reports</string>
    <string name="adddocii">Add Doctor</string>
    <string name="doctorlogsin">Doctor LogIn</string>
    <string name="patientlogin">Patient LogIn</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="myappointments">Upcoming Appointments</string>
    <string name="edityourprofile">Edit Profile</string>
    <string name="gender1">Gender</string>
    <string name="medicalhistory">Medical History</string>
    <string name="todo">TODO</string>
    <string name="names">Name</string>
    <string name="hisemail">Email:</string>
    <string name="date_ofbirth">Date of Birth</string>
    <string name="view_pendingappointments">View Pending Appointments</string>
    <string name="view_upcomingappointments">View Upcoming Appointments</string>
    <string name="inbox">Inbox</string>
    <string name="your_chats">Your Chats</string>
    <string name="generate_prescription">Generate Prescription</string>
    <string name="prescription">PRESCRIPTION</string>
    <string name="doctorname">Doctor Name</string>
    <string name="patientname">Patient Name</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="dosage_n_per_day">Dosage\n(per day)</string>
    <string name="fd">+</string>
    <string name="itemname">Item Name</string>
    <string name="quantityr">Quantity</string>
    <string name="w">Dosage</string>
    <string name="action">Action</string>
    <string name="store_prescription">Store Prescription</string>
    <string name="appointment_feedback">Appointment Feedback</string>
    <string name="how_satisfied_are_you_with_the_doctor_s_explanation">How satisfied are you with the doctor\'s explanation?</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="how_courteous_and_professional_was_the_doctor">How courteous and professional was the doctor?</string>
    <string name="very_courteous_and_professional">Very courteous and professional</string>
    <string name="courteous_and_professional">Courteous and professional</string>
    <string name="neutral">Neutral</string>
    <string name="impolite">Impolite</string>
    <string name="how_would_you_rate_the_overall_experience_of_your_appointment">How would you rate the overall experience of your Appointment?</string>
    <string name="excellentS">Excellent</string>
    <string name="SA">Good</string>
    <string name="SQW">Poor</string>
    <string name="how_likely_are_you_to_recommend_this_doctor_to_others">How likely are you to recommend this doctor to others?</string>
    <string name="very_likely">very likely</string>
    <string name="likely">likely</string>
    <string name="neutral1">Neutral</string>
    <string name="unlikely">Unlikely</string>
    <string name="please_provide_any_additional_feedback_or_comments_about_your_experience">Please provide any additional feedback or comments about your experience.</string>
    <string name="additional_comments">Additional_comments</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="average">Average</string>
    <string name="no_feedback_recorded">No Feedback Recorded</string>
</resources>