<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editTextQualification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/qualification" />

    <EditText
        android:id="@+id/editTextExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/experience"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Profile"
        android:layout_marginTop="24dp"/>
</LinearLayout>