<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_admin"
            android:textStyle="bold"
            android:textColor="#673AB7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginBottom="24dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_profile_placeholder"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/txtAdminName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name5"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btnGenerateInvoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_invoice2"/>

        <Button
            android:id="@+id/btnViewReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_reports"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_doctor4"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
