<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Launchpage"> <!-- Updated to match the class name -->

    <TextView
        android:id="@+id/tv_edoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_doc"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="#00574B"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_admin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_admin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_as_admin1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edoc"
        app:layout_constraintBottom_toTopOf="@id/btn_patient"/>

    <Button
        android:id="@+id/btn_patient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_as_patient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_admin"
        app:layout_constraintBottom_toTopOf="@id/btn_doctor"/>

    <Button
        android:id="@+id/btn_doctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_as_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_patient"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
