<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="80dp"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroupRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioButtonPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Doctor"/>

        <RadioButton
            android:id="@+id/radioButtonAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/signupNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Signup now!"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="20dp" />

</LinearLayout>